@@ -1,5 +1,5 @@
 \."#############################################################################
-\."$Id: cerebro.conf.5.in,v 1.30 2007-10-25 17:04:51 chu11 Exp $
+\."$Id: cerebro.conf.5.in,v 1.31 2008-01-26 06:25:01 chu11 Exp $
 \."#############################################################################
 \."  Copyright (C) 2007 Lawrence Livermore National Security, LLC.
 \."  Copyright (C) 2005-2007 The Regents of the University of California.
@@ -269,6 +269,11 @@ is particularly useful for a
 daemon that is running off cluster as a general "data collector".
 Hosts must be specified in their shortened hostname form.  The hosts
 can be specified space separated, comma separated, or hostranged.
+.TP
+.I cerebrod_metric_module_exclude str1 str2 str3 ...
+Specify metric module names that 
+.B cerebrod
+should not load.
 .if @MANPAGE_DEBUG@ \{
 .TP
 .I cerebrod_speak_debug ( on | off )
